service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-volume
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
